--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -1,10 +1,10 @@
 :root {
-    --color1: #333;
+    --color1: darkblue;
     --color2: #fff;
     --color3: #999;
     --color4: #666;
     --background1: #333;
-    --background2: #f4f4f4;
+    --background2: darkblue;
     --background3: #ccc;
 }
 
@@ -21,11 +21,6 @@
     /* font-family: 'Open Sans', sans-serif; */
 }
 
-img {
-    display: block;
-    max-width: 100%;
-}
-
 html {
     font-size: 62.5%;
 }
@@ -33,74 +28,56 @@ html {
 body {
     min-height: 100vh;
     font-size: 1.6rem;
+    background-color: var(--background1);
 }
 
-a {
-    text-decoration: none;
-    color: var(--color3);
-    font-weight: 900;
-}
-
-a:hover {
-    color: var(--color2);
-    background-color: none;
-}
-
-ul,
-ol {
+ul {
     list-style: none;
 }
 
+div h2 {
+    text-align: center;
+}
+
+
 .logo {
-    color: #333;
-    position: relative;
+    color: var(--color2);
     z-index: 2;
 }
 
 .btn1 {
-    border: 1px solid var(--color1);
-    padding: 2px 15px;
-    color: var(--color1);
-    border-radius: 2px 2px 2px 2px;
-    transition: .3s;
-}
-
-.btn1:hover {
-    background-color: var(--background1);
     color: var(--color2);
+    text-decoration: none;
+    text-align: center;
 }
 
 .btn2 {
-    border: 1px solid var(--color2);
+    border: 1px solid var(--color1);
     padding: 2px 15px;
+    background-color: var(--background2);
     color: var(--color2);
-    border-radius: 2px 2px 2px 2px;
+    border-radius: 5px;
     transition: .3s;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 .btn2:hover {
-    background-color: var(--background2);
+    background-color: var(--background1);
     color: var(--color1);
 }
 
 .btn3 {
-    padding: 2px 15px;
+    text-align: center;
     color: var(--color1);
-    border-radius: 2px 2px 2px 2px;
-    transition: .3s;
+    text-decoration: none;
 }
-
-.btn3:hover {
-    background-color: var(--background1);
-    color: var(--color2);
-}
-
 
 .header,
 .footer {
     width: 100%;
-    height: 10rem;
-    background-color: var(--background1);
+    height: 10vh;
+    background-color: var(--background2);
     color: var(--color2);
     padding: 2rem;
     display: flex;
@@ -115,74 +92,40 @@ ol {
 
 .main {
     width: 100%;
+    height: 80vh;
     padding: 2rem;
-    background-color: var(--background2);
-}
-
-.article {
-    background-image: url(../images/menu2.jpg);
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    margin: 2rem auto;
-    min-height: 70vh;
-    border: 1px solid var(--color4);
-    color: var(--color3);
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.article h1 {
-    font-size: 5vmin;
-    margin: 2rem 0;
-}
-
-.article p {
-    font-size: 1.8rem;
-    margin-bottom: 3rem;
+    color: var(--color1);
+    background-image: url(https://github.com/marcelo-mont/my-first-repository/blob/assets/content/images/cardano-blockchain-platform-with-smartphone.jpg);
 }
 
 .section {
     margin: 2rem auto;
-    min-height: 30vh;
     border: 1px solid var(--color4);
+    border-radius: 10%;
     padding: 2rem;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 1rem;
-}
-
-.section div {
-    width: 40rem;
-    height: 30rem;
+    width: 30rem;
+    height: 40vh;
     padding: 4rem 2rem;
-    box-shadow: 3px 3px var(--background1);
     background-color: var(--background3);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     row-gap: 3rem;
-    transition: .3s;
-}
-
-.section div:hover {
-    transform: scale(1.1);
-}
-
-.section div li {
-    margin-bottom: 1rem;
 }
 
 .footer {
     justify-content: center;
+    height: 10vh;
 }
 
-.box-form {
-    margin: .5rem
+.box-form2 {
+    justify-content: center;
+    display: grid;
 }
 
 .box-item {
@@ -193,31 +136,39 @@ ol {
 
 .form-label {
     font-weight: 600;
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     margin: 0.5rem 0;
 }
 
 .form-control {
     width: 100%;
     border: 0;
-    background-color: var(--color-light);
+    background-color: var(--color2);
     height: 3.5rem;
     border-radius: 5px;
     padding-left: 10px;
-    font-size: 1.1rem;
+    font-size: 1.4rem;
 }
 
 .form-btn {
+    border: 1px solid var(--color1);
+    padding: 2px 15px;
+    transition: .3s;
     width: 100%;
     margin: 0.8rem 0;
     border: 0;
-    background-color: var(--color-pink);
-    color: #fff;
+    background-color: var(--background2);
+    color: var(--color2);
     font-weight: 900;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     height: 3.5rem;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.form-btn:hover {
+    background-color: var(--background3);
+    color: var(--color1);
 }
 
 .sanduiche {
@@ -237,7 +188,7 @@ ol {
     transition: .3s;
 }
 
-@media(max-widht: 1024px) {
+@media(max-width: 600px) {
     .sanduiche {
         display: block;
     }
@@ -251,8 +202,8 @@ ol {
         text-align: center;
         flex-direction: column;
         justify-content: center;
-        height: 100vh;
-        background-color: var(--background3);
+        height: 10vh;
+        background-color: var(--background2);
         transition: .3s;
     }
 
